3.12.5.2 (2025-08-01)
---------------------

* Fix BTS-2201: Make aggreate collect queries work again on an empty collection
	that has an	index used in the query.

* Fix miscounting bug for number of SynchronizeShard jobs scheduled.
  This fixes BTS-2202. The bug could show up as a dbserver not syncing its
  follower shards with the leader.


3.12.5.1 (2025-07-25)
---------------------

* Fix for null access for smallest range when no files on level (RocksDB).

* Fix BTS-2152 Overfetch input on parallel Traversals. For queries like this:

  FOR x IN largeCollection
    FOR v IN 1 OUTBOUND x edges {parallelism: 4}
      LIMIT 10
      RETURN v

  Before this bugfix we would always enumerate largeCollection in full, even
  though a small portion of the collection would have sufficed.
  This is now handled better. We now enumerate only the necessary amount of
  batches required to fulfill the limit.
  This also improves cluster queries (replace the traversal with another FOR
  loop) which had the same behaviour and are now enumerating less unused
  intermediate results.
  Please Note: If the above situation is encapsulated inside a subquery like
  this:

  FOR y IN 1..2
  LET subquery = (
    FOR x IN largeCollection
      FOR v IN 1 OUTBOUND x edges {parallelism: 4}
        LIMIT 10
        RETURN v
  )
  RETURN {y, subquery}

  The issue still exists.

* Fix BTS-2174: When a more complex query get's killed and the server
  (or DBServer in the cluster) is under high query load, there was a
  race condition in the asynchrounous query execution which would cause
  the kill process of the query to get stuck. This race was one
  of the root causes for a stall which was fixed in BTS-2135 previously.
  This situation could only be reached if the async-prefetch optimizer rule
  is active, which can only be applied on read-only queries.

* Add option --database.auto-upgrade-full-compaction to run a full RocksDB
  compaction on database upgrade.


3.12.5 (2025-06-18)